net.tcp bindings used, clean up

--- a/FileServer/App.config
+++ b/FileServer/App.config
@@ -1,29 +1,26 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <system.serviceModel>
+    <services>
+      <service name="FileServer.FileBrowserService">
+        <host>
+          <baseAddresses>
+            <add baseAddress="net.tcp://localhost:5000/"/>
+          </baseAddresses>
+        </host>
+        <endpoint address="FileBrowserService" binding="netTcpBinding" contract="FileServer.IFileBrowserService"/>
+        <endpoint address="mex" binding="mexTcpBinding" contract="IMetadataExchange" />
+      </service>
+    </services>
     <behaviors>
       <serviceBehaviors>
-        <behavior name="">
-          <serviceMetadata httpGetEnabled="true" />
-          <serviceDebug includeExceptionDetailInFaults="false" />
+        <behavior>
+          <serviceMetadata />
+          <serviceDebug includeExceptionDetailInFaults="true" />
         </behavior>
       </serviceBehaviors>
     </behaviors>
-    <services>
-      <service name="FileServer.FileBrowserService">
-        <endpoint address="" binding="wsDualHttpBinding" contract="FileServer.IFileBrowserService">
-          <identity>
-            <dns value="localhost" />
-          </identity>
-        </endpoint>
-        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
-        <host>
-          <baseAddresses>
-            <add baseAddress="http://localhost:5000/FileServer/FileBrowserService/" />
-          </baseAddresses>
-        </host>
-      </service>
-    </services>
   </system.serviceModel>
+
 </configuration>
 
