--- a/FileServer/FileServer.csproj
+++ b/FileServer/FileServer.csproj
@@ -54,6 +54,7 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.Xml" />
@@ -62,6 +63,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="FileInfo.cs" />
+    <Compile Include="FileTypeReader.cs" />
+    <Compile Include="IconReader.cs" />
     <Compile Include="IFileBrowserServiceCallback.cs" />
     <Compile Include="IFileBrowserService.cs" />
     <Compile Include="Program.cs" />
